# object_aware_nav_ws

./: .gitignore  Dockerfile  docker-compose.yml  ros_entrypoint.sh
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/config/: bridge_config.yaml
src/robot_sim/description/: robot.urdf.xacro
src/robot_sim/launch/: robot_state_publisher.launch.py  sim.launch.py  slam.launch.py
src/robot_sim/worlds/: empty_world.sdf  warehouse.sdf
